--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webSpring-Vue",
-  "version": "0.0.4",
+  "version": "0.1.5",
   "description": "Simple boilerplate for web apps. It's fast and it's simple - that makes it a good way to start things. Based on jQuery, Vue, Vuex and Webpack - with ES2015 support.",
   "repository": "https://github.com/tehaiks/originatePack.git",
   "main": "dist/index.html",
@@ -10,6 +10,7 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "bulma": "^0.3.1",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -21,7 +22,6 @@
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
     "vue": "^2.1.8",
-    "vue-router": "^2.1.1",
     "vuex": "^2.1.1",
     "webpack": "^1.14.0",
     "webpack-bundle-analyzer": "^2.2.1",
