--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
     "babel-preset-es2015": "^6.18.0",
     "bulma": "^0.3.1",
     "clean-webpack-plugin": "^0.1.15",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.26.0",
+    "css-loader": "^0.27.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "happypack": "^3.0.3",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.1.1",
     "less": "^2.7.2",
-    "less-loader": "^2.2.3",
+    "less-loader": "^3.0.0",
     "nyan-progress-webpack-plugin": "^1.1.4",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
     "vue": "^2.1.8",
+    "vue-loader": "^11.1.4",
     "vuex": "^2.1.1",
-    "webpack": "^1.14.0",
+    "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-livereload-plugin": "^0.10.0"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^2.28.0"
   }
 }
