--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "style-loader": "^0.13.1",
     "vue": "^2.1.8",
     "vue-loader": "^11.1.4",
+    "vue-template-compiler": "^2.2.1",
     "vuex": "^2.1.1",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
