--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "dist/index.html",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^6.7.7",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
-    "bulma": "^0.3.1",
+    "bulma": "^0.4.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.27.1",
+    "css-mqpacker": "^5.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "happypack": "^3.0.3",
     "html-loader": "^0.4.5",
@@ -21,14 +23,25 @@
     "less": "^2.7.2",
     "less-loader": "^3.0.0",
     "nyan-progress-webpack-plugin": "^1.1.4",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-discard-comments": "^2.0.4",
+    "postcss-discard-duplicates": "^2.1.0",
+    "postcss-discard-empty": "^2.1.0",
+    "postcss-discard-unused": "^2.2.3",
+    "postcss-loader": "^1.3.3",
+    "postcss-zindex": "^2.2.0",
     "script-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.14.1",
     "vue": "^2.1.8",
     "vue-loader": "^11.1.4",
+    "vue-meta": "^0.5.5",
     "vue-template-compiler": "^2.2.1",
     "vuex": "^2.1.1",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-livereload-plugin": "^0.10.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.4.2"
   }
 }
