--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
-  "name": "webSpring-Vue",
-  "version": "0.1.7",
-  "description": "Simple boilerplate for web apps. It's fast and it's simple - that makes it a good way to start things. Based on jQuery, Vue, Vuex and Webpack - with ES2015 support.",
+  "name": "vue_jump_start",
+  "version": "0.2.1",
+  "description": "Simple boilerplate for web apps, using Vue, Vuex and Webpack - with ES6 support.",
   "repository": "https://github.com/tehaiks/originatePack.git",
   "main": "dist/index.html",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^7.1.2",
     "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "bulma": "^0.4.0",
-    "clean-webpack-plugin": "^0.1.15",
-    "css-loader": "^0.27.1",
-    "css-mqpacker": "^5.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "happypack": "^3.0.3",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "bulma": "^0.4.3",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.4",
+    "css-mqpacker": "^6.0.1",
+    "eslint-config-cssnano": "^3.1.3",
+    "extract-text-webpack-plugin": "^2.1.2",
     "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "jquery": "^3.1.1",
+    "html-webpack-plugin": "^2.29.0",
     "less": "^2.7.2",
-    "less-loader": "^3.0.0",
-    "nyan-progress-webpack-plugin": "^1.1.4",
-    "postcss-cssnext": "^2.10.0",
+    "less-loader": "^4.0.4",
+    "nyan-progress-webpack-plugin": "^1.2.0",
+    "postcss-cssnext": "^3.0.0",
     "postcss-discard-comments": "^2.0.4",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-discard-empty": "^2.1.0",
     "postcss-discard-unused": "^2.2.3",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^2.0.6",
     "postcss-zindex": "^2.2.0",
     "script-loader": "^0.7.0",
-    "style-loader": "^0.14.1",
-    "vue": "^2.1.8",
-    "vue-loader": "^11.1.4",
-    "vue-meta": "^0.5.5",
-    "vue-template-compiler": "^2.2.1",
-    "vuex": "^2.1.1",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-livereload-plugin": "^0.10.0"
+    "style-loader": "^0.18.2",
+    "vue": "^2.3.4",
+    "vue-loader": "^13.0.0",
+    "vue-meta": "^1.0.4",
+    "vue-template-compiler": "^2.3.4",
+    "vuex": "^2.3.1",
+    "webpack": "^3.1.0",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.4.2"
+    "babel-preset-env": "^1.6.0",
+    "eslint": "^4.2.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
