--- a/package.json
+++ b/package.json
@@ -1,52 +1,51 @@
 {
   "name": "vue_jump_start",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Simple boilerplate for web apps, using Vue, Vuex and Webpack - with ES6 support.",
   "repository": "https://github.com/tehaiks/vue-jump-start.git",
   "main": "dist/index.html",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^7.1.6",
     "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "bulma": "^0.4.3",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
+    "bulma": "^0.6.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
     "css-mqpacker": "^6.0.1",
     "eslint-config-cssnano": "^3.1.3",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.29.0",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.4",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "nyan-progress-webpack-plugin": "^1.2.0",
-    "postcss-cssnext": "^3.0.0",
+    "postcss-cssnext": "^3.0.2",
     "postcss-discard-comments": "^2.0.4",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-discard-empty": "^2.1.0",
     "postcss-discard-unused": "^2.2.3",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.0.9",
     "postcss-zindex": "^2.2.0",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.18.2",
-    "vue": "^2.3.4",
-    "vue-loader": "^13.0.0",
-    "vue-meta": "^1.0.4",
-    "vue-template-compiler": "^2.3.4",
-    "vuex": "^2.3.1",
-    "webpack": "^3.1.0",
-    "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-livereload-plugin": "^0.11.0"
+    "script-loader": "^0.7.2",
+    "style-loader": "^0.19.0",
+    "vue": "^2.5.9",
+    "vue-loader": "^13.5.0",
+    "vue-meta": "^1.3.1",
+    "vue-template-compiler": "^2.5.9",
+    "vuex": "^3.0.1",
+    "webpack": "^3.9.1",
+    "webpack-bundle-analyzer": "^2.9.1"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-import": "^2.6.1",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "webpack-dev-server": "^2.9.5"
   }
 }
